fix select options list z-index

--- a/assets/styles/components/_select.scss
+++ b/assets/styles/components/_select.scss
@@ -49,7 +49,7 @@
 
   &__options {
     position: absolute;
-    z-index: 1;
+    z-index: 10;
     top: 100%;
     left: 0;
 
