--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -199,7 +199,7 @@ body {
 }
 .select__options {
   position: absolute;
-  z-index: 1;
+  z-index: 10;
   top: 100%;
   left: 0;
   min-width: 100%;
